[gd_scene load_steps=11 format=4 uid="uid://dwqax1ad83134"]

[ext_resource type="Script" uid="uid://butcr2tm3ggb3" path="res://scripts/tutorial_manager.gd" id="1_6yjpi"]
[ext_resource type="Texture2D" uid="uid://chp4lbkrfkg0b" path="res://Sprites/Temp_Tilemap.png" id="1_cq4me"]
[ext_resource type="Script" uid="uid://dw4q4isy0yd5o" path="res://scenes/tutorial.gd" id="1_gbqnl"]
[ext_resource type="PackedScene" uid="uid://big5kolfa5dqc" path="res://scenes/player.tscn" id="3_gbqnl"]
[ext_resource type="PackedScene" uid="uid://byjpyoijhh4dt" path="res://scenes/hud.tscn" id="4_ckvwl"]
[ext_resource type="FontFile" uid="uid://6q2ftdo4l1r0" path="res://assets/fonts/PixelOperator8.ttf" id="7_gbqnl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ejrpe"]
resource_name = "Tile1"
texture = ExtResource("1_cq4me")
texture_region_size = Vector2i(32, 32)
8:8/0 = 0
8:8/0/terrain_set = 0
8:8/0/terrain = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32, -32, 32)
8:8/0/terrains_peering_bit/left_side = 0
8:8/0/terrains_peering_bit/top_left_corner = 0
8:8/0/terrains_peering_bit/top_side = 0
8:4/0 = 0
8:4/0/terrain_set = 0
8:4/0/terrain = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32, -32, 32)
8:4/0/terrains_peering_bit/bottom_side = 0
8:4/0/terrains_peering_bit/bottom_left_corner = 0
8:4/0/terrains_peering_bit/left_side = 0
8:4/0/terrains_peering_bit/top_left_corner = 0
8:4/0/terrains_peering_bit/top_side = 0
8:0/0 = 0
8:0/0/terrain_set = 0
8:0/0/terrain = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32, -32, 32)
8:0/0/terrains_peering_bit/bottom_side = 0
8:0/0/terrains_peering_bit/bottom_left_corner = 0
8:0/0/terrains_peering_bit/left_side = 0
0:8/0 = 0
0:8/0/terrain_set = 0
0:8/0/terrain = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32, -32, 32)
0:8/0/terrains_peering_bit/right_side = 0
0:8/0/terrains_peering_bit/top_side = 0
0:8/0/terrains_peering_bit/top_right_corner = 0
4:8/0 = 0
4:8/0/terrain_set = 0
4:8/0/terrain = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32, -32, 32)
4:8/0/terrains_peering_bit/right_side = 0
4:8/0/terrains_peering_bit/left_side = 0
4:8/0/terrains_peering_bit/top_left_corner = 0
4:8/0/terrains_peering_bit/top_side = 0
4:8/0/terrains_peering_bit/top_right_corner = 0
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16, -16, 16)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16, -16, 16)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16, -16, 16)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16, -16, 16)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16, -16, 16)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16, -16, 16)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16, -16, 16)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16, -16, 16)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16, -16, 16)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_ia5r4"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 4
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_ejrpe")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8x8qj"]
resource_name = "Tile1"
texture = ExtResource("1_cq4me")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/terrain_set = 0
0:0/0/terrain = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/terrains_peering_bit/right_side = 0
0:0/0/terrains_peering_bit/bottom_right_corner = 0
0:0/0/terrains_peering_bit/bottom_side = 0
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0/terrains_peering_bit/right_side = 0
1:0/0/terrains_peering_bit/bottom_right_corner = 0
1:0/0/terrains_peering_bit/bottom_side = 0
1:0/0/terrains_peering_bit/bottom_left_corner = 0
1:0/0/terrains_peering_bit/left_side = 0
2:0/0 = 0
2:0/0/terrain_set = 0
2:0/0/terrain = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0/terrains_peering_bit/bottom_side = 0
2:0/0/terrains_peering_bit/bottom_left_corner = 0
2:0/0/terrains_peering_bit/left_side = 0
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0/terrains_peering_bit/right_side = 0
0:1/0/terrains_peering_bit/bottom_right_corner = 0
0:1/0/terrains_peering_bit/bottom_side = 0
0:1/0/terrains_peering_bit/top_side = 0
0:1/0/terrains_peering_bit/top_right_corner = 0
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0/terrains_peering_bit/right_side = 0
1:1/0/terrains_peering_bit/bottom_right_corner = 0
1:1/0/terrains_peering_bit/bottom_side = 0
1:1/0/terrains_peering_bit/bottom_left_corner = 0
1:1/0/terrains_peering_bit/left_side = 0
1:1/0/terrains_peering_bit/top_left_corner = 0
1:1/0/terrains_peering_bit/top_side = 0
1:1/0/terrains_peering_bit/top_right_corner = 0
2:1/0 = 0
2:1/0/terrain_set = 0
2:1/0/terrain = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0/terrains_peering_bit/bottom_side = 0
2:1/0/terrains_peering_bit/bottom_left_corner = 0
2:1/0/terrains_peering_bit/left_side = 0
2:1/0/terrains_peering_bit/top_left_corner = 0
2:1/0/terrains_peering_bit/top_side = 0
0:2/0 = 0
0:2/0/terrain_set = 0
0:2/0/terrain = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0/terrains_peering_bit/right_side = 0
0:2/0/terrains_peering_bit/top_side = 0
0:2/0/terrains_peering_bit/top_right_corner = 0
1:2/0 = 0
1:2/0/terrain_set = 0
1:2/0/terrain = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0/terrains_peering_bit/right_side = 0
1:2/0/terrains_peering_bit/left_side = 0
1:2/0/terrains_peering_bit/top_left_corner = 0
1:2/0/terrains_peering_bit/top_side = 0
1:2/0/terrains_peering_bit/top_right_corner = 0
2:2/0 = 0
2:2/0/terrain_set = 0
2:2/0/terrain = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0/terrains_peering_bit/left_side = 0
2:2/0/terrains_peering_bit/top_left_corner = 0
2:2/0/terrains_peering_bit/top_side = 0

[sub_resource type="TileSet" id="TileSet_bxbi8"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Terrain 0"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/0 = SubResource("TileSetAtlasSource_8x8qj")

[node name="Tutorial" type="Node2D"]
script = ExtResource("1_gbqnl")

[node name="TutorialManager" type="Node" parent="."]
script = ExtResource("1_6yjpi")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAjAAIAAAACAAEAAAAjAAEAAAACAAEAAAAjAAAAAAACAAAAAAAiAAIAAAABAAEAAAAiAAEAAAABAAEAAAAiAAAAAAABAAAAAAAhAAIAAAABAAEAAAAhAAEAAAABAAEAAAAhAAAAAAABAAAAAAAgAAIAAAABAAIAAAAgAAEAAAABAAEAAAAgAAAAAAABAAAAAAAfAAIAAAABAAIAAAAfAAEAAAABAAEAAAAfAAAAAAABAAAAAAAeAAIAAAABAAIAAAAeAAEAAAABAAEAAAAeAAAAAAABAAAAAAAdAAIAAAABAAIAAAAdAAEAAAABAAEAAAAdAAAAAAABAAAAAAAcAAIAAAABAAIAAAAcAAEAAAABAAEAAAAcAAAAAAABAAAAAAAbAAIAAAABAAIAAAAbAAEAAAABAAEAAAAbAAAAAAABAAAAAAAaAAIAAAABAAIAAAAaAAEAAAABAAEAAAAaAAAAAAABAAAAAAAZAAIAAAABAAIAAAAZAAEAAAABAAEAAAAZAAAAAAABAAAAAAAYAAIAAAABAAIAAAAYAAEAAAABAAEAAAAYAAAAAAABAAAAAAAXAAIAAAABAAIAAAAXAAEAAAABAAEAAAAXAAAAAAABAAAAAAAWAAIAAAABAAIAAAAWAAEAAAABAAEAAAAWAAAAAAABAAAAAAAVAAIAAAABAAIAAAAVAAEAAAABAAEAAAAVAAAAAAABAAAAAAAUAAIAAAABAAIAAAAUAAEAAAABAAEAAAAUAAAAAAABAAAAAAATAAIAAAABAAIAAAATAAEAAAABAAEAAAATAAAAAAABAAAAAAASAAIAAAABAAIAAAASAAEAAAABAAEAAAASAAAAAAABAAAAAAARAAIAAAABAAIAAAARAAEAAAABAAEAAAARAAAAAAABAAAAAAAQAAIAAAABAAIAAAAQAAEAAAABAAEAAAAQAAAAAAABAAAAAAAPAAIAAAABAAIAAAAPAAEAAAABAAEAAAAPAAAAAAABAAAAAAAOAAIAAAABAAIAAAAOAAEAAAABAAEAAAAOAAAAAAABAAAAAAANAAIAAAABAAIAAAANAAEAAAABAAEAAAANAAAAAAABAAAAAAAMAAIAAAABAAIAAAAMAAEAAAABAAEAAAAMAAAAAAABAAAAAAALAAIAAAABAAIAAAALAAEAAAABAAEAAAALAAAAAAABAAAAAAAKAAIAAAABAAIAAAAKAAEAAAABAAEAAAAKAAAAAAABAAAAAAAJAAIAAAABAAIAAAAJAAEAAAABAAEAAAAJAAAAAAABAAAAAAAIAAIAAAABAAIAAAAIAAEAAAABAAEAAAAIAAAAAAABAAAAAAAHAAIAAAABAAIAAAAHAAEAAAABAAEAAAAHAAAAAAABAAAAAAAGAAIAAAABAAIAAAAGAAEAAAABAAEAAAAGAAAAAAABAAAAAAAFAAIAAAABAAIAAAAFAAEAAAABAAEAAAAFAAAAAAABAAAAAAAEAAIAAAABAAIAAAAEAAEAAAABAAEAAAAEAAAAAAABAAAAAAADAAIAAAABAAIAAAADAAEAAAABAAEAAAADAAAAAAABAAAAAAACAAIAAAABAAEAAAACAAEAAAABAAEAAAACAAAAAAABAAAAAAABAAIAAAABAAEAAAABAAEAAAABAAEAAAABAAAAAAABAAAAAAAAAAIAAAAAAAEAAAAAAAEAAAAAAAEAAAAAAAAAAAAAAAAAAAAjABMAAAACAAEAAAAjABIAAAACAAEAAAAjABEAAAACAAEAAAAiABMAAAABAAEAAAAiABIAAAABAAEAAAAiABEAAAABAAEAAAAhABMAAAABAAEAAAAhABIAAAABAAEAAAAhABEAAAABAAEAAAAgABMAAAABAAEAAAAgABIAAAABAAEAAAAgABEAAAABAAAAAAAfABMAAAABAAEAAAAfABIAAAABAAEAAAAfABEAAAABAAAAAAAeABMAAAABAAEAAAAeABIAAAABAAEAAAAeABEAAAABAAAAAAAdABMAAAABAAEAAAAdABIAAAABAAEAAAAdABEAAAABAAAAAAAcABMAAAABAAEAAAAcABIAAAABAAEAAAAcABEAAAABAAAAAAAbABMAAAABAAEAAAAbABIAAAABAAEAAAAbABEAAAABAAAAAAAaABMAAAABAAEAAAAaABIAAAABAAEAAAAaABEAAAABAAAAAAAZABMAAAABAAEAAAAZABIAAAABAAEAAAAZABEAAAABAAAAAAAYABMAAAABAAEAAAAYABIAAAABAAEAAAAYABEAAAABAAAAAAAXABMAAAABAAEAAAAXABIAAAABAAEAAAAXABEAAAABAAAAAAAWABMAAAABAAEAAAAWABIAAAABAAEAAAAWABEAAAABAAAAAAAVABMAAAABAAEAAAAVABIAAAABAAEAAAAVABEAAAABAAAAAAAUABMAAAABAAEAAAAUABIAAAABAAEAAAAUABEAAAABAAAAAAATABMAAAABAAEAAAATABIAAAABAAEAAAATABEAAAABAAAAAAASABMAAAABAAEAAAASABIAAAABAAEAAAASABEAAAABAAAAAAARABMAAAABAAEAAAARABIAAAABAAEAAAARABEAAAABAAAAAAAQABMAAAABAAEAAAAQABIAAAABAAEAAAAQABEAAAABAAAAAAAPABMAAAABAAEAAAAPABIAAAABAAEAAAAPABEAAAABAAAAAAAOABMAAAABAAEAAAAOABIAAAABAAEAAAAOABEAAAABAAAAAAANABMAAAABAAEAAAANABIAAAABAAEAAAANABEAAAABAAAAAAAMABMAAAABAAEAAAAMABIAAAABAAEAAAAMABEAAAABAAAAAAALABMAAAABAAEAAAALABIAAAABAAEAAAALABEAAAABAAAAAAAKABMAAAABAAEAAAAKABIAAAABAAEAAAAKABEAAAABAAAAAAAJABMAAAABAAEAAAAJABIAAAABAAEAAAAJABEAAAABAAAAAAAIABMAAAABAAEAAAAIABIAAAABAAEAAAAIABEAAAABAAAAAAAHABMAAAABAAEAAAAHABIAAAABAAEAAAAHABEAAAABAAAAAAAGABMAAAABAAEAAAAGABIAAAABAAEAAAAGABEAAAABAAAAAAAFABMAAAABAAEAAAAFABIAAAABAAEAAAAFABEAAAABAAAAAAAEABMAAAABAAEAAAAEABIAAAABAAEAAAAEABEAAAABAAAAAAADABMAAAABAAEAAAADABIAAAABAAEAAAADABEAAAABAAAAAAACABMAAAABAAEAAAACABIAAAABAAEAAAACABEAAAABAAEAAAABABMAAAABAAEAAAABABIAAAABAAEAAAABABEAAAABAAEAAAAAABMAAAAAAAEAAAAAABIAAAAAAAEAAAAAABEAAAAAAAEAAAAjABAAAAACAAEAAAAjAA8AAAACAAEAAAAjAA4AAAACAAEAAAAjAA0AAAACAAEAAAAjAAwAAAACAAEAAAAjAAsAAAACAAEAAAAjAAoAAAACAAEAAAAiABAAAAABAAEAAAAiAA8AAAABAAEAAAAiAA4AAAABAAEAAAAiAA0AAAABAAEAAAAiAAwAAAABAAEAAAAiAAsAAAABAAEAAAAiAAoAAAABAAEAAAAhABAAAAAAAAEAAAAhAA8AAAAAAAEAAAAhAA4AAAAAAAEAAAAhAA0AAAAAAAEAAAAhAAwAAAAAAAEAAAAhAAsAAAAAAAEAAAAhAAoAAAAAAAEAAAAjAAkAAAACAAEAAAAjAAgAAAACAAEAAAAjAAcAAAACAAEAAAAjAAYAAAACAAEAAAAjAAUAAAACAAEAAAAjAAQAAAACAAEAAAAjAAMAAAACAAEAAAAiAAkAAAABAAEAAAAiAAgAAAABAAEAAAAiAAcAAAABAAEAAAAiAAYAAAABAAEAAAAiAAUAAAABAAEAAAAiAAQAAAABAAEAAAAiAAMAAAABAAEAAAAhAAkAAAAAAAEAAAAhAAgAAAAAAAEAAAAhAAcAAAAAAAEAAAAhAAYAAAAAAAEAAAAhAAUAAAAAAAEAAAAhAAQAAAAAAAEAAAAhAAMAAAAAAAEAAAAFABQAAAABAAEAAAAEABQAAAABAAEAAAADABQAAAABAAEAAAACABQAAAABAAEAAAABABQAAAABAAEAAAAAABQAAAAAAAEAAAAPABQAAAABAAEAAAAOABQAAAABAAEAAAANABQAAAABAAEAAAAMABQAAAABAAEAAAALABQAAAABAAEAAAAKABQAAAABAAEAAAAJABQAAAABAAEAAAAIABQAAAABAAEAAAAHABQAAAABAAEAAAAGABQAAAABAAEAAAAeABUAAAABAAIAAAAeABQAAAABAAEAAAAdABUAAAABAAIAAAAdABQAAAABAAEAAAAcABUAAAABAAIAAAAcABQAAAABAAEAAAAbABUAAAABAAIAAAAbABQAAAABAAEAAAAaABUAAAABAAIAAAAaABQAAAABAAEAAAAZABUAAAABAAIAAAAZABQAAAABAAEAAAAYABUAAAABAAIAAAAYABQAAAABAAEAAAAXABUAAAABAAIAAAAXABQAAAABAAEAAAAWABUAAAABAAIAAAAWABQAAAABAAEAAAAVABUAAAABAAIAAAAVABQAAAABAAEAAAAUABUAAAABAAIAAAAUABQAAAABAAEAAAATABUAAAABAAIAAAATABQAAAABAAEAAAASABUAAAABAAIAAAASABQAAAABAAEAAAARABUAAAABAAIAAAARABQAAAABAAEAAAAQABUAAAABAAIAAAAQABQAAAABAAEAAAAPABUAAAABAAIAAAAOABUAAAABAAIAAAANABUAAAABAAIAAAAMABUAAAABAAIAAAALABUAAAABAAIAAAAKABUAAAABAAIAAAAJABUAAAABAAIAAAAIABUAAAABAAIAAAAHABUAAAABAAIAAAAGABUAAAABAAIAAAAFABUAAAABAAIAAAAEABUAAAABAAIAAAADABUAAAABAAIAAAACABUAAAABAAIAAAABABUAAAABAAIAAAAAABUAAAAAAAIAAAAjABUAAAACAAIAAAAjABQAAAACAAEAAAAiABUAAAABAAIAAAAiABQAAAABAAEAAAAhABUAAAABAAIAAAAhABQAAAABAAEAAAAgABUAAAABAAIAAAAgABQAAAABAAEAAAAfABUAAAABAAIAAAAfABQAAAABAAEAAAACAA4AAAACAAEAAAACAA0AAAACAAEAAAACAAwAAAACAAEAAAACAAsAAAACAAEAAAACAAoAAAACAAEAAAACAAkAAAACAAEAAAACAAgAAAACAAEAAAACAAcAAAACAAEAAAACAAYAAAACAAEAAAACAAUAAAACAAEAAAACAAQAAAACAAEAAAACAAMAAAACAAEAAAABAA4AAAABAAEAAAABAA0AAAABAAEAAAABAAwAAAABAAEAAAABAAsAAAABAAEAAAABAAoAAAABAAEAAAABAAkAAAABAAEAAAABAAgAAAABAAEAAAABAAcAAAABAAEAAAABAAYAAAABAAEAAAABAAUAAAABAAEAAAABAAQAAAABAAEAAAABAAMAAAABAAEAAAAAAA4AAAAAAAEAAAAAAA0AAAAAAAEAAAAAAAwAAAAAAAEAAAAAAAsAAAAAAAEAAAAAAAoAAAAAAAEAAAAAAAkAAAAAAAEAAAAAAAgAAAAAAAEAAAAAAAcAAAAAAAEAAAAAAAYAAAAAAAEAAAAAAAUAAAAAAAEAAAAAAAQAAAAAAAEAAAAAAAMAAAAAAAEAAAACABAAAAACAAEAAAACAA8AAAACAAEAAAABABAAAAABAAEAAAABAA8AAAABAAEAAAAAABAAAAAAAAEAAAAAAA8AAAAAAAEAAAA=")
tile_set = SubResource("TileSet_ia5r4")

[node name="Player" parent="." instance=ExtResource("3_gbqnl")]
unique_name_in_owner = true
position = Vector2(558, 355)
scale = Vector2(2.485, 2.485)

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
modulate = Color(0.575473, 0.62145, 0.693056, 1)
z_index = -2
tile_map_data = PackedByteArray("AAAWAAwAAAABAAEAAAAWAAsAAAABAAEAAAAWAAoAAAABAAEAAAAWAAkAAAABAAEAAAAWAAgAAAABAAEAAAAWAAcAAAABAAEAAAAWAAYAAAABAAEAAAAWAAUAAAABAAEAAAAWAAQAAAABAAEAAAAWAAMAAAABAAEAAAAVAAwAAAABAAEAAAAVAAsAAAABAAEAAAAVAAoAAAABAAEAAAAVAAkAAAABAAEAAAAVAAgAAAABAAEAAAAVAAcAAAABAAEAAAAVAAYAAAABAAEAAAAVAAUAAAABAAEAAAAVAAQAAAABAAEAAAAVAAMAAAABAAEAAAAUAAwAAAABAAEAAAAUAAsAAAABAAEAAAAUAAoAAAABAAEAAAAUAAkAAAABAAEAAAAUAAgAAAABAAEAAAAUAAcAAAABAAEAAAAUAAYAAAABAAEAAAAUAAUAAAABAAEAAAAUAAQAAAABAAEAAAAUAAMAAAABAAEAAAATAAwAAAABAAEAAAATAAsAAAABAAEAAAATAAoAAAABAAEAAAATAAkAAAABAAEAAAATAAgAAAABAAEAAAATAAcAAAABAAEAAAATAAYAAAABAAEAAAATAAUAAAABAAEAAAATAAQAAAABAAEAAAATAAMAAAABAAEAAAASAAwAAAABAAEAAAASAAsAAAABAAEAAAASAAoAAAABAAEAAAASAAkAAAABAAEAAAASAAgAAAABAAEAAAASAAcAAAABAAEAAAASAAYAAAABAAEAAAASAAUAAAABAAEAAAASAAQAAAABAAEAAAASAAMAAAABAAEAAAARAAwAAAABAAEAAAARAAsAAAABAAEAAAARAAoAAAABAAEAAAARAAkAAAABAAEAAAARAAgAAAABAAEAAAARAAcAAAABAAEAAAARAAYAAAABAAEAAAARAAUAAAABAAEAAAARAAQAAAABAAEAAAARAAMAAAABAAEAAAAQAAwAAAABAAEAAAAQAAsAAAABAAEAAAAQAAoAAAABAAEAAAAQAAkAAAABAAEAAAAQAAgAAAABAAEAAAAQAAcAAAABAAEAAAAQAAYAAAABAAEAAAAQAAUAAAABAAEAAAAQAAQAAAABAAEAAAAQAAMAAAABAAEAAAAPAAwAAAABAAEAAAAPAAsAAAABAAEAAAAPAAoAAAABAAEAAAAPAAkAAAABAAEAAAAPAAgAAAABAAEAAAAPAAcAAAABAAEAAAAPAAYAAAABAAEAAAAPAAUAAAABAAEAAAAPAAQAAAABAAEAAAAPAAMAAAABAAEAAAAOAAwAAAABAAEAAAAOAAsAAAABAAEAAAAOAAoAAAABAAEAAAAOAAkAAAABAAEAAAAOAAgAAAABAAEAAAAOAAcAAAABAAEAAAAOAAYAAAABAAEAAAAOAAUAAAABAAEAAAAOAAQAAAABAAEAAAAOAAMAAAABAAEAAAANAAwAAAABAAEAAAANAAsAAAABAAEAAAANAAoAAAABAAEAAAANAAkAAAABAAEAAAANAAgAAAABAAEAAAANAAcAAAABAAEAAAANAAYAAAABAAEAAAANAAUAAAABAAEAAAANAAQAAAABAAEAAAANAAMAAAABAAEAAAAMAAwAAAABAAEAAAAMAAsAAAABAAEAAAAMAAoAAAABAAEAAAAMAAkAAAABAAEAAAAMAAgAAAABAAEAAAAMAAcAAAABAAEAAAAMAAYAAAABAAEAAAAMAAUAAAABAAEAAAAMAAQAAAABAAEAAAAMAAMAAAABAAEAAAALAAwAAAABAAEAAAALAAsAAAABAAEAAAALAAoAAAABAAEAAAALAAkAAAABAAEAAAALAAgAAAABAAEAAAALAAcAAAABAAEAAAALAAYAAAABAAEAAAALAAUAAAABAAEAAAALAAQAAAABAAEAAAALAAMAAAABAAEAAAAKAAwAAAABAAEAAAAKAAsAAAABAAEAAAAKAAoAAAABAAEAAAAKAAkAAAABAAEAAAAKAAgAAAABAAEAAAAKAAcAAAABAAEAAAAKAAYAAAABAAEAAAAKAAUAAAABAAEAAAAKAAQAAAABAAEAAAAKAAMAAAABAAEAAAAJAAwAAAABAAEAAAAJAAsAAAABAAEAAAAJAAoAAAABAAEAAAAJAAkAAAABAAEAAAAJAAgAAAABAAEAAAAJAAcAAAABAAEAAAAJAAYAAAABAAEAAAAJAAUAAAABAAEAAAAJAAQAAAABAAEAAAAJAAMAAAABAAEAAAAIAAwAAAABAAEAAAAIAAsAAAABAAEAAAAIAAoAAAABAAEAAAAIAAkAAAABAAEAAAAIAAgAAAABAAEAAAAIAAcAAAABAAEAAAAIAAYAAAABAAEAAAAIAAUAAAABAAEAAAAIAAQAAAABAAEAAAAIAAMAAAABAAEAAAAHAAwAAAABAAEAAAAHAAsAAAABAAEAAAAHAAoAAAABAAEAAAAHAAkAAAABAAEAAAAHAAgAAAABAAEAAAAHAAcAAAABAAEAAAAHAAYAAAABAAEAAAAHAAUAAAABAAEAAAAHAAQAAAABAAEAAAAHAAMAAAABAAEAAAAGAAwAAAABAAEAAAAGAAsAAAABAAEAAAAGAAoAAAABAAEAAAAGAAkAAAABAAEAAAAGAAgAAAABAAEAAAAGAAcAAAABAAEAAAAGAAYAAAABAAEAAAAGAAUAAAABAAEAAAAGAAQAAAABAAEAAAAGAAMAAAABAAEAAAAFAAwAAAABAAEAAAAFAAsAAAABAAEAAAAFAAoAAAABAAEAAAAFAAkAAAABAAEAAAAFAAgAAAABAAEAAAAFAAcAAAABAAEAAAAFAAYAAAABAAEAAAAFAAUAAAABAAEAAAAFAAQAAAABAAEAAAAFAAMAAAABAAEAAAAEAAwAAAABAAEAAAAEAAsAAAABAAEAAAAEAAoAAAABAAEAAAAEAAkAAAABAAEAAAAEAAgAAAABAAEAAAAEAAcAAAABAAEAAAAEAAYAAAABAAEAAAAEAAUAAAABAAEAAAAEAAQAAAABAAEAAAAEAAMAAAABAAEAAAADAAwAAAABAAEAAAADAAsAAAABAAEAAAADAAoAAAABAAEAAAADAAkAAAABAAEAAAADAAgAAAABAAEAAAADAAcAAAABAAEAAAADAAYAAAABAAEAAAADAAUAAAABAAEAAAADAAQAAAABAAEAAAADAAMAAAABAAEAAAAgAA8AAAABAAEAAAAgAA4AAAABAAEAAAAgAA0AAAABAAEAAAAgAAwAAAABAAEAAAAgAAsAAAABAAEAAAAgAAoAAAABAAEAAAAgAAkAAAABAAEAAAAgAAgAAAABAAEAAAAgAAcAAAABAAEAAAAgAAYAAAABAAEAAAAfAA8AAAABAAEAAAAfAA4AAAABAAEAAAAfAA0AAAABAAEAAAAfAAwAAAABAAEAAAAfAAsAAAABAAEAAAAfAAoAAAABAAEAAAAfAAkAAAABAAEAAAAfAAgAAAABAAEAAAAfAAcAAAABAAEAAAAfAAYAAAABAAEAAAAeAA8AAAABAAEAAAAeAA4AAAABAAEAAAAeAA0AAAABAAEAAAAeAAwAAAABAAEAAAAeAAsAAAABAAEAAAAeAAoAAAABAAEAAAAeAAkAAAABAAEAAAAeAAgAAAABAAEAAAAeAAcAAAABAAEAAAAeAAYAAAABAAEAAAAdAA8AAAABAAEAAAAdAA4AAAABAAEAAAAdAA0AAAABAAEAAAAdAAwAAAABAAEAAAAdAAsAAAABAAEAAAAdAAoAAAABAAEAAAAdAAkAAAABAAEAAAAdAAgAAAABAAEAAAAdAAcAAAABAAEAAAAdAAYAAAABAAEAAAAcAA8AAAABAAEAAAAcAA4AAAABAAEAAAAcAA0AAAABAAEAAAAcAAwAAAABAAEAAAAcAAsAAAABAAEAAAAcAAoAAAABAAEAAAAcAAkAAAABAAEAAAAcAAgAAAABAAEAAAAcAAcAAAABAAEAAAAcAAYAAAABAAEAAAAbAA8AAAABAAEAAAAbAA4AAAABAAEAAAAbAA0AAAABAAEAAAAbAAwAAAABAAEAAAAbAAsAAAABAAEAAAAbAAoAAAABAAEAAAAbAAkAAAABAAEAAAAbAAgAAAABAAEAAAAbAAcAAAABAAEAAAAbAAYAAAABAAEAAAAaAA8AAAABAAEAAAAaAA4AAAABAAEAAAAaAA0AAAABAAEAAAAaAAwAAAABAAEAAAAaAAsAAAABAAEAAAAaAAoAAAABAAEAAAAaAAkAAAABAAEAAAAaAAgAAAABAAEAAAAaAAcAAAABAAEAAAAaAAYAAAABAAEAAAAZAA8AAAABAAEAAAAZAA4AAAABAAEAAAAZAA0AAAABAAEAAAAZAAwAAAABAAEAAAAZAAsAAAABAAEAAAAZAAoAAAABAAEAAAAZAAkAAAABAAEAAAAZAAgAAAABAAEAAAAZAAcAAAABAAEAAAAZAAYAAAABAAEAAAAYAA8AAAABAAEAAAAYAA4AAAABAAEAAAAYAA0AAAABAAEAAAAYAAwAAAABAAEAAAAYAAsAAAABAAEAAAAYAAoAAAABAAEAAAAYAAkAAAABAAEAAAAYAAgAAAABAAEAAAAYAAcAAAABAAEAAAAYAAYAAAABAAEAAAAXAA8AAAABAAEAAAAXAA4AAAABAAEAAAAXAA0AAAABAAEAAAAXAAwAAAABAAEAAAAXAAsAAAABAAEAAAAXAAoAAAABAAEAAAAXAAkAAAABAAEAAAAXAAgAAAABAAEAAAAXAAcAAAABAAEAAAAXAAYAAAABAAEAAAAWAA8AAAABAAEAAAAWAA4AAAABAAEAAAAWAA0AAAABAAEAAAAVAA8AAAABAAEAAAAVAA4AAAABAAEAAAAVAA0AAAABAAEAAAAUAA8AAAABAAEAAAAUAA4AAAABAAEAAAAUAA0AAAABAAEAAAATAA8AAAABAAEAAAATAA4AAAABAAEAAAATAA0AAAABAAEAAAASAA8AAAABAAEAAAASAA4AAAABAAEAAAASAA0AAAABAAEAAAARAA8AAAABAAEAAAARAA4AAAABAAEAAAARAA0AAAABAAEAAAAQAA8AAAABAAEAAAAQAA4AAAABAAEAAAAQAA0AAAABAAEAAAAgAAUAAAABAAEAAAAgAAQAAAABAAEAAAAgAAMAAAABAAEAAAAfAAUAAAABAAEAAAAfAAQAAAABAAEAAAAfAAMAAAABAAEAAAAeAAUAAAABAAEAAAAeAAQAAAABAAEAAAAeAAMAAAABAAEAAAAdAAUAAAABAAEAAAAdAAQAAAABAAEAAAAdAAMAAAABAAEAAAAcAAUAAAABAAEAAAAcAAQAAAABAAEAAAAcAAMAAAABAAEAAAAbAAUAAAABAAEAAAAbAAQAAAABAAEAAAAbAAMAAAABAAEAAAAaAAUAAAABAAEAAAAaAAQAAAABAAEAAAAaAAMAAAABAAEAAAAZAAUAAAABAAEAAAAZAAQAAAABAAEAAAAZAAMAAAABAAEAAAAYAAUAAAABAAEAAAAYAAQAAAABAAEAAAAYAAMAAAABAAEAAAAXAAUAAAABAAEAAAAXAAQAAAABAAEAAAAXAAMAAAABAAEAAAAPAA0AAAABAAEAAAAOAA0AAAABAAEAAAANAA0AAAABAAEAAAAMAA0AAAABAAEAAAALAA0AAAABAAEAAAAKAA0AAAABAAEAAAAJAA0AAAABAAEAAAAIAA0AAAABAAEAAAAHAA0AAAABAAEAAAAhAA8AAAABAAEAAAAhAA4AAAABAAEAAAAhAA0AAAABAAEAAAAhAAwAAAACAAEAAAAhAAsAAAACAAEAAAAhAAoAAAACAAEAAAAhAAkAAAACAAEAAAAhAAgAAAACAAEAAAAhAAcAAAACAAEAAAAhAAYAAAACAAEAAAAhAAUAAAACAAEAAAAhAAQAAAACAAEAAAAhAAMAAAACAAEAAAAhAAIAAAACAAAAAAAgAAIAAAABAAAAAAAfAAIAAAABAAAAAAAeAAIAAAABAAAAAAAdAAIAAAABAAAAAAAcAAIAAAABAAAAAAAbAAIAAAABAAAAAAAaAAIAAAABAAAAAAAZAAIAAAABAAAAAAAYAAIAAAABAAAAAAAXAAIAAAABAAAAAAAWAAIAAAABAAAAAAAVAAIAAAABAAAAAAAUAAIAAAABAAAAAAATAAIAAAABAAAAAAASAAIAAAABAAAAAAARAAIAAAABAAAAAAAQAAIAAAABAAAAAAAPAA8AAAABAAEAAAAPAA4AAAABAAEAAAAPAAIAAAABAAAAAAAOAA8AAAABAAEAAAAOAA4AAAABAAEAAAAOAAIAAAABAAAAAAANAA8AAAABAAEAAAANAA4AAAABAAEAAAANAAIAAAABAAAAAAAMAA8AAAABAAEAAAAMAA4AAAABAAEAAAAMAAIAAAABAAAAAAALAA8AAAABAAEAAAALAA4AAAABAAEAAAALAAIAAAABAAAAAAAKAA8AAAABAAEAAAAKAA4AAAABAAEAAAAKAAIAAAABAAAAAAAJAA8AAAABAAEAAAAJAA4AAAABAAEAAAAJAAIAAAABAAAAAAAIAA8AAAABAAEAAAAIAA4AAAABAAEAAAAIAAIAAAABAAAAAAAHAA8AAAABAAEAAAAHAA4AAAABAAEAAAAHAAIAAAABAAAAAAAGAA8AAAABAAEAAAAGAA4AAAABAAEAAAAGAA0AAAABAAEAAAAGAAIAAAABAAAAAAAFAA8AAAABAAEAAAAFAA4AAAABAAEAAAAFAA0AAAABAAEAAAAFAAIAAAABAAAAAAAEAA8AAAABAAEAAAAEAA4AAAABAAEAAAAEAA0AAAABAAEAAAAEAAIAAAABAAAAAAADAA8AAAABAAEAAAADAA4AAAABAAEAAAADAA0AAAABAAEAAAADAAIAAAABAAAAAAACAA8AAAAAAAEAAAACAA4AAAAAAAEAAAACAA0AAAAAAAEAAAACAAwAAAAAAAEAAAACAAsAAAAAAAEAAAACAAoAAAAAAAEAAAACAAkAAAAAAAEAAAACAAgAAAAAAAEAAAACAAcAAAAAAAEAAAACAAYAAAAAAAEAAAACAAUAAAAAAAEAAAACAAQAAAAAAAEAAAACAAMAAAAAAAEAAAACAAIAAAAAAAAAAAAiABIAAAACAAIAAAAiABEAAAACAAEAAAAiABAAAAACAAEAAAAiAA8AAAACAAEAAAAiAA4AAAACAAEAAAAiAA0AAAACAAAAAAAhABIAAAABAAIAAAAhABEAAAABAAEAAAAhABAAAAABAAEAAAAgABIAAAABAAIAAAAgABEAAAABAAEAAAAgABAAAAABAAEAAAAfABIAAAABAAIAAAAfABEAAAABAAEAAAAfABAAAAABAAEAAAAeABIAAAABAAIAAAAeABEAAAABAAEAAAAeABAAAAABAAEAAAAdABIAAAABAAIAAAAdABEAAAABAAEAAAAdABAAAAABAAEAAAAcABIAAAABAAIAAAAcABEAAAABAAEAAAAcABAAAAABAAEAAAAbABIAAAABAAIAAAAbABEAAAABAAEAAAAbABAAAAABAAEAAAAaABIAAAABAAIAAAAaABEAAAABAAEAAAAaABAAAAABAAEAAAAZABIAAAABAAIAAAAZABEAAAABAAEAAAAZABAAAAABAAEAAAAYABIAAAABAAIAAAAYABEAAAABAAEAAAAYABAAAAABAAEAAAAXABIAAAABAAIAAAAXABEAAAABAAEAAAAXABAAAAABAAEAAAAWABIAAAABAAIAAAAWABEAAAABAAEAAAAWABAAAAABAAEAAAAVABIAAAABAAIAAAAVABEAAAABAAEAAAAVABAAAAABAAEAAAAUABIAAAABAAIAAAAUABEAAAABAAEAAAAUABAAAAABAAEAAAATABIAAAABAAIAAAATABEAAAABAAEAAAATABAAAAABAAEAAAASABIAAAABAAIAAAASABEAAAABAAEAAAASABAAAAABAAEAAAARABIAAAABAAIAAAARABEAAAABAAEAAAARABAAAAABAAEAAAAQABIAAAABAAIAAAAQABEAAAABAAEAAAAQABAAAAABAAEAAAAPABIAAAABAAIAAAAPABEAAAABAAEAAAAPABAAAAABAAEAAAAOABIAAAABAAIAAAAOABEAAAABAAEAAAAOABAAAAABAAEAAAANABIAAAABAAIAAAANABEAAAABAAEAAAANABAAAAABAAEAAAAMABIAAAABAAIAAAAMABEAAAABAAEAAAAMABAAAAABAAEAAAALABIAAAABAAIAAAALABEAAAABAAEAAAALABAAAAABAAEAAAAKABIAAAABAAIAAAAKABEAAAABAAEAAAAKABAAAAABAAEAAAAJABIAAAABAAIAAAAJABEAAAABAAEAAAAJABAAAAABAAEAAAAIABIAAAABAAIAAAAIABEAAAABAAEAAAAIABAAAAABAAEAAAAHABIAAAABAAIAAAAHABEAAAABAAEAAAAHABAAAAABAAEAAAAGABIAAAABAAIAAAAGABEAAAABAAEAAAAGABAAAAABAAEAAAAFABIAAAABAAIAAAAFABEAAAABAAEAAAAFABAAAAABAAEAAAAEABIAAAABAAIAAAAEABEAAAABAAEAAAAEABAAAAABAAEAAAADABIAAAABAAIAAAADABEAAAABAAEAAAADABAAAAABAAEAAAACABIAAAAAAAIAAAACABEAAAAAAAEAAAACABAAAAAAAAEAAAA=")
tile_set = SubResource("TileSet_bxbi8")

[node name="HUD" parent="." instance=ExtResource("4_ckvwl")]
unique_name_in_owner = true
offset_left = 0.0
offset_top = -1.0
offset_right = 0.0
offset_bottom = -1.0

[node name="TutorLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
offset_left = 285.0
offset_top = 99.0
offset_right = 888.0
offset_bottom = 328.0
theme_override_fonts/normal_font = ExtResource("7_gbqnl")
theme_override_font_sizes/normal_font_size = 32
text = "This is a placeholder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextDelay" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.5
one_shot = true

[node name="BossSpawn" type="Marker2D" parent="."]
position = Vector2(953, 133)
